[package]
name = "exemplar"
description = "A boilerplate eliminator for rusqlite."

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
exemplar_proc_macro = { version = "0.5.6" }
rusqlite = "0.29.0"

[dev-dependencies]
anyhow = "1.0.75"
