[package]
name = "exemplar"
description = "A boilerplate eliminator for rusqlite."
categories = ["database"]

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
exemplar_proc_macro = { version = "0.7.1" }
rusqlite = "0.31.0"

[dev-dependencies]
anyhow = "1.0.75"
criterion = "0.5.1"
serde = "1.0.189"
serde_rusqlite = "0.35.0"

[[bench]]
name = "binding_strategies"
harness = false

[[bench]]
name = "query_exemplar"
harness = false

[[bench]]
name = "query_serde"
harness = false

[[bench]]
name = "query_manual"
harness = false
