[package]
name = "exemplar_proc_macro"
description = "Proc macros for the exemplar crate."

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.68"
quote = "1.0.33"
syn = { version = "2.0.38" }
