[package]
name = "exemplar_proc_macro"
description = "Proc macros for the exemplar crate."

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2       = "1.0.94"
quote             = "1.0.39"
syn               = "2.0.100"
